--- a/residential-one-properties/sass/page-templates/_floor-plans.scss
+++ b/residential-one-properties/sass/page-templates/_floor-plans.scss
@@ -128,6 +128,11 @@
 					padding:30px 60px;
 					max-width: 710px;
 				}
+				#plan-nav {
+					font-size: .83em;
+					margin: 0;
+					justify-content: none;
+				}
 			}
 
 			#article-wrapper {
